--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,7 +77,7 @@ jobs:
           php-version: "${{ matrix.php-version }}"
       - name: Composer
         run: |
-          echo '{"autoload": {"psr-4": {"BInfotech\\Streams\\": "src/"}},"autoload-dev": {"psr-4": {"BInfotech\\Streams\\Tests\\": "tests/"}}}' > composer.json
+          echo '{"autoload": {"psr-4": {"Tecnovix\\Streams\\": "src/"}},"autoload-dev": {"psr-4": {"Tecnovix\\Streams\\Tests\\": "tests/"}}}' > composer.json
           composer require --dev phpunit/phpunit ^6
       - name: PHPUnit Tests
         run: php ./vendor/bin/phpunit tests  -c tests/phpunit.xml
